--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
+:root {
+   --main-bg-color: #d0f5ed;
+}
+
 .App {
-  text-align: center;
+   position: absolute;
+   margin-top: 23rem;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   min-width: 960px;
+   max-width: 960px;
+   max-height: 720px;
+   min-height: 720px;
+   background-color: var(--main-bg-color);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+   background-color: var(--main-bg-color);
+   padding: 2rem;
+   min-width: 960px;
+   max-width: 960px;
+   margin: auto;
 }
