--- a/src/Safety.css
+++ b/src/Safety.css
@@ -1,140 +1,76 @@
 .Safety {
-   max-width: 800px;
-   min-width: 800px;
-   margin: auto;
-   line-height: 1.8;
-   font-weight: bold;
-   margin-top: 1rem;
-   overflow: hidden;
+   text-align: center;
+   margin-top: 1.5rem;
 }
 
-.Safety .safetyContainer {
+.Safety-Slider {
+   position: relative;
+   height: 450px;
    display: flex;
-   width: 100%;
-   height: 500px;
-}
-
-.Safety h3 {
-   color: #f4f4f4;
-   padding: 0.7rem;
-   padding-left: 3rem;
-   width: 700px;
-   margin-bottom: 2rem;
-   font-size: 1.4rem;
-}
-
-.safetyContainer > div {
-   min-width: 800px;
-   padding-left: 2.5rem;
-   margin-top: 1rem;
-}
-
-.Safety .box {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
+   justify-content: center;
    align-items: center;
 }
 
-.Safety p {
-   font-size: 1.4rem;
-   margin-top: -4rem;
-   padding: 1rem;
-   margin-right: 1.5rem;
+.Safety-Slider .slider-image {
+   height: 300px;
 }
 
-.Safety .s1 h3 {
-   background-color: rgb(37, 122, 62);
+.Safety-Slider .arrow {
+   position: absolute;
+   top: 50%;
+   opacity: 0.7;
+   font-size: 4rem;
+   color: #1ba36f;
+   cursor: pointer;
+   z-index: 10;
 }
-.Safety .s2 h3 {
-   background-color: rgb(18, 106, 184);
-}
-.Safety .s3 h3 {
-   background-color: rgb(189, 189, 58);
-}
-.Safety .s4 h3 {
-   background-color: rgb(253, 182, 48);
-}
-.Safety .s5 h3 {
-   background-color: rgb(185, 27, 27);
-}
-.Safety .s6 h3 {
-   background-color: rgb(138, 14, 150);
-}
-.Safety button {
-   padding: 2rem;
-   margin: 2rem;
-   margin-top: -2rem;
-}
-.Safety i {
-   opacity: 0.6;
-   transition: 0.3s ease-in-out;
-   color: rgb(22, 110, 182);
-}
-.Safety i:hover {
+
+.Safety-Slider .arrow:hover {
+   transition: 0.2s ease-in-out;
    opacity: 1;
-   color: rgb(22, 74, 117);
 }
 
-.Safety #prevBtn {
-   position: absolute;
-   top: 50%;
-   z-index: 10;
-   left: 5%;
-   font-size: 50px;
-   cursor: pointer;
+.Safety-Slider .right-arrow {
+   right: 32px;
 }
 
-.Safety #nextBtn {
-   position: absolute;
-   top: 50%;
-   z-index: 10;
-   right: 5%;
-   font-size: 50px;
-   cursor: pointer;
+.Safety-Slider .left-arrow {
+   left: 32px;
 }
 
-.Safety .box img {
-   width: 300px;
-}
-
-.Safety .s2 .box img {
-   width: 350px;
-   margin-right: 3rem;
-}
-.Safety .s3 .box img {
-   width: 280px;
-}
-
-.Safety .arrow {
-   border: solid rgb(7, 112, 103);
-   border-width: 0 7px 7px 0;
-   display: inline-block;
-   padding: 20px;
-}
-
-.Safety .right {
-   transform: rotate(-45deg);
-}
-
-.Safety .left {
-   transform: rotate(135deg);
-}
-
-.Safety h2 {
+.Safety-Slider .slide {
+   opacity: 0;
+   transition-duration: 1s ease;
    text-align: center;
-   color: #094b4b;
-   font-size: 1.9rem;
+   font-weight: bold;
+   max-width: 750px;
 }
 
-.Safety ul {
-   padding-left: 2rem;
+.Safety-Slider .slide.active {
+   opacity: 1;
+   transition-duration: 1s;
 }
 
-.Safety ul li {
-   list-style-type: disc;
-   font-size: 1.2rem;
-}
-
-.Safety .s6 .box {
+.Safety-Slider .slide .box {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   text-align: left;
+   margin-left: 3rem;
    margin-top: 3rem;
+}
+
+.Safety-Slider .slide h2 {
+   color: #f4f4f4;
+}
+
+.Safety-Slider .slide .box p {
+   margin-top: 2rem;
+   padding-right: 2rem;
+   font-size: 1.3rem;
+}
+
+.Safety-Slider .slide .box ul {
+   margin-top: -9rem;
+   margin-left: 2rem;
+   font-size: 1.1rem;
 }
